# ComfyUI_OneButtonPrompt

./: .gitignore  0pyproject.toml  DeepSeekRone.py  DeepSeekRone_Qwen.py  LoadCivitai.py  OneButtonPrompt.py  README-CN.md  README-en.md  README.md  __init__.py  pyproject.toml  requirements.txt
files/images/: civit_imgs-sfw-20250329.md
files/prompts/: Fantasy-sci-fi-female-prompts.txt  Fantasy-sci-fi-male-prompts.txt  Female-adjectives-prompts.txt  Men-accessories-prompts.txt  Mythical-things-prompts.txt  Scenery-objects-prompts.txt  Women-accessories-prompts.txt  adiectives-prompts.txt  animals-prompts.txt  artists-prompts.txt  building-prompts.txt  camera-angle-prompts.txt  careers-prompts.txt  colors-prompts.txt  female-prompts.txt  human_poses-prompts.txt  lightings-prompts.txt  male-prompts.txt  nation-cities-prompts.txt  others-prompts.txt  plants-prompts.txt  styles-prompts.txt  transportation-vehicles-prompts.txt
txtfiles/: add_humans.txt  add_others.txt  add_poses.txt  add_styles.txt  example_human_poses.txt  example_humans.txt  example_others.txt  example_poses.txt  example_styles.txt  example_test.txt  prompt_words.xlsx
workflow_example/: Advanced-Deepseek-FLUX automatic prompt generates images automatically.json  Deepseek-FLUX automatic prompt generates images automatically.json  FLUX automatic prompt generates images automatically.json  deepseek_Civitai.json
