[project]
name = "onebuttonprompt-mw"
description = "A node that assists in one click generation of prompts (for image and video generation, etc.) in Comfyui."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/billwuhao/ComfyUI_OneButtonPrompt"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mw"
DisplayName = "MW-ComfyUI_OneButtonPrompt"
Icon = "https://github.com/billwuhao/aiart.website/blob/master/hb.png"
